--- a/.github/workflows/create_app.yml
+++ b/.github/workflows/create_app.yml
@@ -25,41 +25,37 @@ jobs:
           echo "TYPE=${{ github.event.inputs.type }}" >> $GITHUB_ENV
           WORKFLOW_VERSION="v1"
 
-      - name: Criar repositório vazio
-        uses: peter-evans/create-or-update-repository@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: ${{ env.PROJECT_NAME }}
-          private: false
-
-      - name: Clonar template correspondente
+      - name: Criar repositório via API
         run: |
-          REPO_TYPE="backend"
+          REPO_TYPE="frontend"
           
           if [[ "${{ env.TYPE }}" == *Python ]]; then
             TEMPLATE_REPO="StackSpot-Application-Python"
+            REPO_TYPE="backend"
           elif [[ "${{ env.TYPE }}" == *Angular Shell ]]; then
             TEMPLATE_REPO="StackSpot-Application-Angular-Shell"
-            REPO_TYPE="frontend"
           elif [[ "${{ env.TYPE }}" == *Angular MFE ]]; then
             TEMPLATE_REPO="StackSpot-Application-Angular-MFE"
-            REPO_TYPE="frontend"
           else
             echo "Tipo de aplicação inválido: ${{ env.TYPE }}"
             exit 1
           fi
 
           REPO_NAME="gen-${WORKFLOW_VERSION}-${REPO_TYPE}-${{ env.PROJECT_NAME }}"
-          echo "Clonando template: $TEMPLATE_REPO para o repositório $REPO_NAME"
-          
-          # Clona template em pasta temporária
+
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.TEMPLATE_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/user/repos \
+            -d "{\"name\":\"$REPO_NAME\", \"private\":false}"
+
+      - name: Clonar template correspondente
+        run: |
+
+          echo "Clonando template: $TEMPLATE_REPO para o repositório $REPO_NAME..."
           git clone https://$TEMPLATE_TOKEN@github.com/$TEMPLATE_REPO.git temp
           
           cd temp
-          
-          # Remove o remote original e adiciona o do novo repositório
           git remote remove origin
           git remote add origin https://github.com/GTotonio/$REPO_NAME.git
-          
-          # Push para o novo repositório
           git push -u origin main
