--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -55,9 +55,9 @@ jobs:
       - name: Upload build
         run: |
           S3_PATH="s3://gtotonio-webview/${BUILD_VERSION}/"
-          aws s3 sync dist/ $S3_PATH --acl public-read
+          aws s3 sync dist/ $S3_PATH
 
       # 8. Atualiza latest
       - name: Update latest
         run: |
-          aws s3 sync dist/ s3://gtotonio-webview/latest/ --acl public-read --delete
+          aws s3 sync dist/ s3://gtotonio-webview/latest/ --delete
