--- a/.github/workflows/s3-publish.yml
+++ b/.github/workflows/s3-publish.yml
@@ -34,7 +34,7 @@ jobs:
             ${{ runner.os }}-node-
 
       # 4. Install dependencies and build
-      - run: npm i
+      - run: npm ci
       - run: npm run build
 
       # 5. Configure AWS CLI via OIDC
