--- a/.github/workflows/create-application.yml
+++ b/.github/workflows/create-application.yml
@@ -11,7 +11,7 @@ on:
         required: true
         type: choice
         options:
-          - Backend - Python
+          - Backend - Python FastAPI
           - Frontend - Angular Shell
           - Frontend - Angular MFE
 
@@ -35,8 +35,8 @@ jobs:
           echo "ℹ️ - Tipo do repositório: $INPUT_PROJECT_TYPE"
           
           PROJECT_TYPE="frontend"
-          if [[ $INPUT_PROJECT_TYPE == *Python ]]; then
-            PROJECT_TEMPLATE="StackSpot-Application-Python"
+          if [[ $INPUT_PROJECT_TYPE == *Python\ FastAPI ]]; then
+            PROJECT_TEMPLATE="StackSpot-Application-Python-FastAPI"
             PROJECT_TYPE="backend"
           elif [[ $INPUT_PROJECT_TYPE == *Angular\ Shell ]]; then
             PROJECT_TEMPLATE="StackSpot-Application-Angular-Shell"
