--- a/.github/workflows/import-ecr-backend-publish.yml
+++ b/.github/workflows/import-ecr-backend-publish.yml
@@ -2,6 +2,10 @@ name: Import - Publicar em Bucket S3 via OIDC
 
 on:
   workflow_call:
+    inputs:
+      project-name:
+        required: true
+        type: string
 
 jobs:
   deploy:
